VIH-5971 : Scrollbar issue in command centre

--- a/VideoWeb/VideoWeb/ClientApp/src/app/vh-officer/pending-tasks/pending-tasks.component.scss
+++ b/VideoWeb/VideoWeb/ClientApp/src/app/vh-officer/pending-tasks/pending-tasks.component.scss
@@ -5,7 +5,7 @@
   font-weight: bold;
 }
 .alert-badge {
-  position: absolute;
+  position: relative;
   font-weight: bold;
 }
 
